# rust-playground

./: .gitignore  Cargo.toml  LICENSE  README.md  devbox.json  nx.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
apps/weather/: app.json  jest.config.ts  package.json  project.json  pubspec.yaml
apps/weather-e2e/: .detoxrc.json  project.json
apps/weather-service/: Cargo.toml  project.json
apps/weather/src/app/: App.tsx
config/: install-tailwind.sh  set-env.sh
crates/weather-client/: Cargo.toml
crates/weather-client/src/: main.rs
crates/weather-service/: Cargo.toml
